--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,23 @@
+# .gitignore for a project
+
+# Ignore environment files
 .env
-backend/env
+
+# Ignore build artifacts
 build
-frontend/node_modules
-backend/__pycache__
+
+# node_modules directory
+node_modules/
+
+# Ignore Python cache files
+__pycache__/
+*.pyc
+
+# Ignore virtual environment directories
+venv
+
+# Ignore log files
+.DS_Store
+
+# Ignore compiled Python files
+*.pyc
